--- a/public/assets/styles/partials/_footer.scss
+++ b/public/assets/styles/partials/_footer.scss
@@ -15,11 +15,7 @@
 }
 	
 .social-section,
-.contact-section {
-	.group-title {
-		color: $color-light;
-    }
-		
+.contact-section {		
 	a {
 		color: $color-medium;
         transition: all .5s ease-in-out;
