--- a/public/assets/styles/partials/_typography.scss
+++ b/public/assets/styles/partials/_typography.scss
@@ -170,6 +170,7 @@ blockquote {
     &.plain {
        @include ul('none'); 
        padding: 0;
+       margin-bottom: ms(4);
     }
  
 	
